[package]
name = "tiger"
version = "0.1.0"
authors = ["The Rust-Crypto Project Developers"]
license = "MIT/Apache-2.0"
description = "tiger hash function"
documentation = "https://docs.rs/tiger"
repository = "https://github.com/RustCrypto/hashes"
keywords = ["crypto", "tiger", "hash", "digest"]

[dependencies]
byte-tools = "0.1"
digest = "0.4"
digest-buffer = "0.2"
generic-array = "0.6"

[dev-dependencies]
crypto-tests = "0.3"
